manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80         # Port exposé par le service
      targetPort: 5000 # Port interne de l'app Flask
      nodePort: 30007  # Port d'accès depuis le host Minikube
